--- a/client/src/components/SensorAlarm/SensorAlarm.css
+++ b/client/src/components/SensorAlarm/SensorAlarm.css
@@ -4,7 +4,7 @@
 }
 
 .custom-overlay {
-  background: rgba(36, 123, 160, 0.7) !important;
+  background: rgba(51, 50, 50, .7) !important;
 }
 .custom-modal {
   background: #1C1B1B !important;
